--- a/webapp/view/Addstrategy.view.xml
+++ b/webapp/view/Addstrategy.view.xml
@@ -92,8 +92,21 @@
 								</form:label>
 								<form:fields>
 									<ComboBox id="cbDocType" placeholder="Choose Document Type" editable="true" enabled="true" visible="true" width="auto" valueState="None"
-										maxWidth="100%" items="{ path: '/DocTypeCollection' }" selectionChange="onChangeDocType">
-										<core:ListItem key="{DocTypeCode}" text="{DocTypeCode} - {Doctype}"/>
+										maxWidth="100%" selectionChange="onChangeDocType">
+										<!--<core:ListItem key="{DocTypeCode}" text="{DocTypeCode} - {Doctype}"/>-->
+										<core:ListItem key="21" text="21 - Internal 1 PT"/>
+										<core:ListItem key="22" text="22 - Internal Antar PT"/>
+										<core:ListItem key="23" text="23 - Eksternal 1 PT"/>
+										<core:ListItem key="24" text="24 - Eksternal Antar PT"/>
+										<core:ListItem key="B1" text="B1 - Antar Section"/>
+										<core:ListItem key="Z6" text="Z6 - Pengunduran Diri Normal"/>
+										<core:ListItem key="62" text="62 - Pensiun"/>
+										<core:ListItem key="C1" text="C1 - Kelengkapan Data Unit"/>
+										<core:ListItem key="C2" text="C2 - Kelengkapan Data HO"/>
+										<core:ListItem key="Z1" text="Z1 - Promosi"/>
+										<core:ListItem key="41" text="41 - Demosi"/>
+										<core:ListItem key="E1" text="E1 - Change Personal Data"/>
+										<core:ListItem key="E2" text="E2 - Change Data Agama"/>
 									</ComboBox>
 								</form:fields>
 							</form:FormElement>
@@ -119,8 +132,11 @@
 								</form:label>
 								<form:fields>
 									<ComboBox xmlns="sap.m" selectedKey="" placeholder="Choose Business Category" editable="true" enabled="true" visible="true" width="auto"
-										valueState="None" maxWidth="100%" id="cbBusiness" items="{ path: '/BusinessCollection' }" selectionChange="onChangeBusiness">
-										<core:ListItem key="{Code}" text="{Code} - {Business}"/>
+										valueState="None" maxWidth="100%" id="cbBusiness" selectionChange="onChangeBusiness">
+										<core:ListItem key="1" text="ESTATE"/>
+										<core:ListItem key="2" text="INDUSTRY"/>
+										<core:ListItem key="3" text="POM"/>
+										<core:ListItem key="4" text="HO/BO"/>
 									</ComboBox>
 								</form:fields>
 							</form:FormElement>
